Instructions to silence MOTD

--- a/new-linux-setup.org
+++ b/new-linux-setup.org
@@ -128,11 +128,13 @@ ServerAliveInterval 240
 ***** vim ~/.config/user-dirs.dirs
 ***** sudo vim /etc/xdg/user-dirs.defaults
 ***** via http://www.arj.no/2017/01/03/nautilus-bookmarks/
-** Add audio eq:
+** Add audio eq: (may have caused problems?)
 *** sudo apt install pulseaudio-equalizer
 *** https://askubuntu.com/a/982556
 *** but then individual applications may not be using the eq. Install volume control
 **** https://askubuntu.com/questions/580631/how-to-set-which-output-sound-an-application-should-use
+** Silence MOTD, which is typically Canonical spam:
+*** touch ~/.hushlogin
 * Keyboard layout:
 ** Final solution for the P51:
 *** 1. Do some switching in tweak-tool/typing:
